Working jwt token based auth
