# src/main/handlers/auth/token.js
@@ -1,9 +1,6 @@
-import jwtManager from "../../security/jwt/jwtManager";
-import { getReleasedToken } from "../../controllers/auth.controller";
+import {getReleasedToken} from "../../controllers/auth.controller";
 
 module.exports = {
-    get: [
-        jwtManager.isAuthenticated,
-        getReleasedToken
-    ]
+    get: getReleasedToken
+
 };
