# src/main/handlers/users/{userId}.js
@@ -1,10 +1,5 @@
-import jwtAuthenticator from "../../security/jwt/jwtManager";
-
 module.exports = {
-    get: [
-        jwtAuthenticator.isAuthenticated,
-        function (req, res) {
-            return res.json({'a': 'b'});
-        }
-    ]
+    get: function (req, res) {
+        return res.json({'a': 'b'});
+    }
 };
